[project]
name = "container-helm"
description = "Container image based on Debian with kubectl and helm installed"
version = "4.0.0"
authors = [{ name = "Björn Petersen", email = "git@bjoernpetersen.net" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"

requires-python = "==3.13.*"

dependencies = [
    "commitizen ==4.8.4",
    "pre-commit >=4.0.0, <5.0.0",
]

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true
