[project]
name = "container-helm"
description = "Container image based on Debian with kubectl and helm installed"
version = "7.0.5"
authors = [{ name = "Björn Petersen", email = "git@bjoernpetersen.net" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"

requires-python = "==3.14.4"

dependencies = [
    "commitizen ==4.13.10",
    "pre-commit ==4.5.1",
]

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true
